# ai-cubpet

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml
cmake/: FetchThirdParty.cmake  cyclonedds.cmake  webrtc_audio_processing.cmake
config/boards/: MUSE-Pi-Pro.json  k1-x_Elephant_mipi.json
config/daemon/: ai_cubpet.default.json
config/daemon/boards/: k1-x_Elephant_mipi.json
docs/product/: ai-cubpet-product-definition-v0.1.md
docs/superpowers/plans/: 2026-07-03-ai-cubpet-mvp-product-loop.md
docs/superpowers/specs/: 2026-07-03-ai-cubpet-mvp-product-loop-design.md
examples/: ai_cubpet_daemon.cpp  main.cpp  peripherals.c
idl/: ToyCommand.idl
include/: cubpet_action_controller.hpp  cubpet_action_rate_limiter.hpp  cubpet_aec_pipeline.hpp  cubpet_audio_pipeline.hpp  cubpet_daemon_config.hpp  cubpet_doa_runtime.hpp  cubpet_environment_levels.hpp  cubpet_environment_monitors.hpp  cubpet_keywords.hpp  cubpet_led_controller.hpp  cubpet_motor_actions.hpp  cubpet_peripheral_config.h  cubpet_peripheral_manager.hpp  cubpet_touch_event_aggregator.hpp  cubpet_touch_gpio_monitor.hpp  cubpet_toy_state_machine.hpp  cubpet_ui_publisher.hpp  cubpet_voice_demo.hpp  cubpet_voice_interaction_gate.hpp  cubpet_wake_gpio_monitor.hpp  cubpet_wifi_provisioning.hpp
src/: cubpet_action_controller.cpp  cubpet_action_rate_limiter.cpp  cubpet_aec_pipeline.cpp  cubpet_audio_pipeline.cpp  cubpet_daemon_config.cpp  cubpet_doa_runtime.cpp  cubpet_environment_levels.cpp  cubpet_environment_monitors.cpp  cubpet_keywords.cpp  cubpet_led_controller.cpp  cubpet_motor_actions.cpp  cubpet_peripheral_config.cpp  cubpet_peripheral_manager.cpp  cubpet_touch_event_aggregator.cpp  cubpet_touch_gpio_monitor.cpp  cubpet_toy_state_machine.cpp  cubpet_ui_publisher.cpp  cubpet_voice_demo.cpp  cubpet_voice_interaction_gate.cpp  cubpet_wake_gpio_monitor.cpp  cubpet_wifi_provisioning.cpp
tests/: action_controller_test.cpp  action_rate_limiter_test.cpp  daemon_config_test.cpp  keywords_test.cpp  light_level_test.cpp  peripheral_config_test.cpp  peripheral_manager_test.cpp  touch_event_aggregator_test.cpp  toy_state_machine_test.cpp  voice_interaction_gate_test.cpp  wifi_provisioning_test.cpp
tests/fixtures/boards/: MUSE-Pi-Pro.json
ui/: dds_test_publisher.cpp  main_dds.cpp  main_standalone.cpp
ui/inc/: cubpet_ui_dds_subscriber.hpp  toy_display_widget.hpp
ui/src/: cubpet_ui_dds_subscriber.cpp  toy_display_widget.cpp
