<?xml version="1.0"?>
<package format="3">
  <name>ai-cubpet</name>
  <version>0.1.0</version>
  <description>AI Cubpet native application with a local voice-control demo.</description>
  <maintainer email="dev@spacemit.com">Spacemit Robotics</maintainer>
  <license>Apache-2.0</license>

  <depend>audio</depend>
  <depend>audio_process</depend>
  <depend>asr</depend>
  <depend>light_sensor</depend>
  <depend>led</depend>
  <depend>misc_io</depend>
  <depend>motor</depend>
  <depend>nfc</depend>
  <depend>imu</depend>
  <depend>pm</depend>
  <depend>vad</depend>
  <depend>wifi</depend>

  <system_depend realm="target" check_kind="pkg-config" check_arg="libgpiod">libgpiod-dev</system_depend>
  <system_depend realm="host" check_kind="command" check_arg="git">git</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="portaudio-2.0">portaudio19-dev</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="sndfile">libsndfile1-dev</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="fftw3f">libfftw3-dev</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="samplerate">libsamplerate0-dev</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="libcurl">libcurl4-openssl-dev</system_depend>
  <system_depend realm="target" check_kind="pkg-config" check_arg="libssl">libssl-dev</system_depend>
  <system_depend realm="target" check_kind="command" check_arg="nmcli">network-manager</system_depend>
  <system_depend realm="target" check_kind="file" check_arg="/usr/include/nlohmann/json.hpp">nlohmann-json3-dev</system_depend>
  <system_depend realm="target" check_kind="dpkg" check_arg="qtbase5-gles-dev">qtbase5-gles-dev</system_depend>
  <system_depend realm="host" check_kind="file" check_arg="/usr/lib/qt5/bin/moc">qtbase5-dev-tools</system_depend>
  <system_depend realm="target" arch="riscv64">spacemit-onnxruntime</system_depend>
  <system_depend realm="target" arch="riscv64">python3-spacemit-ort</system_depend>
  <system_depend realm="host" check_kind="command" check_arg="meson">meson</system_depend>
  <system_depend realm="host" check_kind="command" check_arg="ninja">ninja-build</system_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
